--- a/PresentationLayer/MVCTESTSITE/Views/Shared/_LayoutFoot.cshtml
+++ b/PresentationLayer/MVCTESTSITE/Views/Shared/_LayoutFoot.cshtml
@@ -1,1 +1,8 @@
-﻿
+﻿<!--导航条固定在浏览器窗口底部-->
+<div class="navbar navbar-default navbar-fixed-bottom">
+    <!-- FOOTER -->
+    <footer class="footer">
+        &copy; 2017 The Develovers
+    </footer>
+    <!-- END FOOTER -->
+</div>
