--- a/PresentationLayer/MVCTESTSITE/Views/Shared/_LayoutHead.cshtml
+++ b/PresentationLayer/MVCTESTSITE/Views/Shared/_LayoutHead.cshtml
@@ -1,36 +1,56 @@
-﻿
-<div class="navbar navbar-default navbar-fixed-top" role="navigation">
-
-    <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </button>
-        <a class="" href="index.html"><span class="navbar-brand"><span class="fa fa-paper-plane"></span> Aircraft</span></a>
-    </div>
-
-    <div class="navbar-collapse collapse" style="height: 1px;">
-        <ul id="main-menu" class="nav navbar-nav navbar-right">
-            <li class="dropdown hidden-xs">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                    <span class="glyphicon glyphicon-user padding-right-small" style="position:relative;top: 3px;"></span> Jack Smith
-                    <i class="fa fa-caret-down"></i>
-                </a>
-
-                <ul class="dropdown-menu">
-                    <li><a href="./">My Account</a></li>
-                    <li class="divider"></li>
-                    <li class="dropdown-header">Admin Panel</li>
-                    <li><a href="./">Users</a></li>
-                    <li><a href="./">Security</a></li>
-                    <li><a tabindex="-1" href="./">Payments</a></li>
-                    <li class="divider"></li>
-                    <li><a tabindex="-1" href="sign-in.html">Logout</a></li>
-                </ul>
-            </li>
-        </ul>
-
-    </div>
-</div>
+﻿<!-- TOP BAR -->
+<!-- TOP BAR -->
+<div class="top-bar navbar-fixed-top">
+    <div class="container">
+        <div class="clearfix">
+            <div class="row">
+                <a href="#" class="pull-left toggle-sidebar-collapse"><i class="fa fa-bars"></i></a>
+                <!-- logo -->
+                <!-- logo -->
+                <div class="pull-left left logo">
+                    <a class="" href="index.html"><span class="navbar-brand"><span class="fa fa-paper-plane"></span> Aircraft</span></a>
+                </div>
+                <!-- end logo -->
+                <div class="col-md-10">
+                    <div class="row">
+                        <div class="col-md-9">
+                            <div class="top-bar-right">
+                                <!-- logged user and the menu -->
+                                <div class="logged-user">
+                                    <div class="btn-group">
+                                        <a href="#" class="btn btn-link dropdown-toggle" data-toggle="dropdown">
+                                            <span class="glyphicon glyphicon-user padding-right-small" style="position:relative;top: 3px;"></span>
+                                            <span class="name">Stacy Rose</span> <span class="caret"></span>
+                                        </a>
+                                        <ul class="dropdown-menu" role="menu">
+                                            <li>
+                                                <a href="#">
+                                                    <i class="fa fa-user"></i>
+                                                    <span class="text">Profile</span>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="#">
+                                                    <i class="fa fa-cog"></i>
+                                                    <span class="text">Settings</span>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="#">
+                                                    <i class="fa fa-power-off"></i>
+                                                    <span class="text">Logout</span>
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <!-- end logged user and the menu -->
+                            </div><!-- /top-bar-right -->
+                        </div>
+                    </div><!-- /row -->
+                </div>
+            
+            </div><!-- /row -->
+        </div>
+        </div><!-- /container -->
+    </div><!-- /top -->
