--- a/PresentationLayer/MVCTESTSITE/Views/Shared/_LayoutLeftMenu.cshtml
+++ b/PresentationLayer/MVCTESTSITE/Views/Shared/_LayoutLeftMenu.cshtml
@@ -1,65 +1,178 @@
-﻿<div class="sidebar-scroll" style="overflow: hidden; width: auto; height: 100%;">
-    <div class="sidebar-nav">
-        <ul>
-            <li>
-                <a href="#" class="js-sub-menu-toggle">
-                    <i class="fa fa-clipboard fa-fw"></i><span class="text">Pages</span>
-                    <i class="toggle-icon fa fa-angle-left"></i>
-                </a>
-                <ul class="sub-menu">
-                    <li><a href="page-profile.html"><span class="text">Profile</span></a></li>
-                </ul>
-            </li>
-            <li><a href="#" data-target=".dashboard-menu" class="nav-header" data-toggle="collapse"><i class="fa fa-fw fa-dashboard"></i> Dashboard<i class="fa fa-collapse"></i></a></li>
-            <li>
-                <ul class="dashboard-menu nav nav-list collapse in">
-                    <li><a href="index.html"><span class="fa fa-caret-right"></span> Main</a></li>
-                    <li><a href="users.html"><span class="fa fa-caret-right"></span> User List</a></li>
-                    <li class="active"><a href="user.html"><span class="fa fa-caret-right"></span> User Profile</a></li>
-                    <li><a href="media.html"><span class="fa fa-caret-right"></span> Media</a></li>
-                    <li><a href="calendar.html"><span class="fa fa-caret-right"></span> Calendar</a></li>
-                </ul>
-            </li>
-
-            <li data-popover="true" data-content="Items in this group require a <strong><a href='http://portnine.com/bootstrap-themes/aircraft' target='blank'>premium license</a><strong>." rel="popover" data-placement="right"><a href="#" data-target=".premium-menu" class="nav-header collapsed" data-toggle="collapse"><i class="fa fa-fw fa-fighter-jet"></i> Premium Features<i class="fa fa-collapse"></i></a></li>
-            <li>
-                <ul class="premium-menu nav nav-list collapse">
-                    <li class="visible-xs visible-sm"><a href="#">- Premium features require a license -</a></span>
-                    <li><a href="premium-profile.html"><span class="fa fa-caret-right"></span> Enhanced Profile</a></li>
-                    <li><a href="premium-blog.html"><span class="fa fa-caret-right"></span> Blog</a></li>
-                    <li><a href="premium-blog-item.html"><span class="fa fa-caret-right"></span> Blog Page</a></li>
-                    <li><a href="premium-pricing-tables.html"><span class="fa fa-caret-right"></span> Pricing Tables</a></li>
-                    <li><a href="premium-upgrade-account.html"><span class="fa fa-caret-right"></span> Upgrade Account</a></li>
-                    <li><a href="premium-widgets.html"><span class="fa fa-caret-right"></span> Widgets</a></li>
-                    <li><a href="premium-timeline.html"><span class="fa fa-caret-right"></span> Activity Timeline</a></li>
-                    <li><a href="premium-users.html"><span class="fa fa-caret-right"></span> Enhanced Users List</a></li>
-                    <li><a href="premium-media.html"><span class="fa fa-caret-right"></span> Enhanced Media</a></li>
-                    <li><a href="premium-invoice.html"><span class="fa fa-caret-right"></span> Invoice</a></li>
-                    <li><a href="premium-build.html"><span class="fa fa-caret-right"></span> Advanced Tools</a></li>
-                    <li><a href="premium-colors.html"><span class="fa fa-caret-right"></span> Additional Color Themes</a></li>
-                </ul>
-            </li>
-
-            <li><a href="#" data-target=".accounts-menu" class="nav-header collapsed" data-toggle="collapse"><i class="fa fa-fw fa-briefcase"></i> Account <span class="label label-info">+3</span></a></li>
-            <li>
-                <ul class="accounts-menu nav nav-list collapse">
-                    <li><a href="sign-in.html"><span class="fa fa-caret-right"></span> Sign In</a></li>
-                    <li><a href="sign-up.html"><span class="fa fa-caret-right"></span> Sign Up</a></li>
-                    <li><a href="reset-password.html"><span class="fa fa-caret-right"></span> Reset Password</a></li>
-                </ul>
-            </li>
-
-            <li><a href="#" data-target=".legal-menu" class="nav-header collapsed" data-toggle="collapse"><i class="fa fa-fw fa-legal"></i> Legal<i class="fa fa-collapse"></i></a></li>
-            <li>
-                <ul class="legal-menu nav nav-list collapse">
-                    <li><a href="privacy-policy.html"><span class="fa fa-caret-right"></span> Privacy Policy</a></li>
-                    <li><a href="terms-and-conditions.html"><span class="fa fa-caret-right"></span> Terms and Conditions</a></li>
-                </ul>
-            </li>
-
-            <li><a href="help.html" class="nav-header"><i class="fa fa-fw fa-question-circle"></i> Help</a></li>
-            <li><a href="faq.html" class="nav-header"><i class="fa fa-fw fa-comment"></i> Faq</a></li>
-            <li><a href="http://portnine.com/bootstrap-themes/aircraft" class="nav-header" target="blank"><i class="fa fa-fw fa-heart"></i> Get Premium</a></li>
-        </ul>
+﻿  <!-- LEFT SIDEBAR -->
+<div id="left-sidebar" class="left-sidebar">
+    <!-- main-nav -->
+    <div class="sidebar-scroll">
+        <nav class="main-nav">
+            <ul class="main-menu">
+                <li class="active">
+                    <a href="#" class="js-sub-menu-toggle">
+                        <i class="fa fa-dashboard fa-fw"></i><span class="text">Dashboard</span>
+                        <i class="toggle-icon fa fa-angle-down"></i>
+                    </a>
+                    <ul class="sub-menu open">
+                        <li class="active"><a href="index.html"><span class="text">Dashboard v1</span></a></li>
+                        <li><a href="index-transparent.html"><span class="text">Dashboard v1 Transp.</span></a></li>
+                        <li><a href="index-dashboard-v2.html"><span class="text">Dashboard v2</span></a></li>
+                        <li><a href="index-dashboard-v2-transparent.html"><span class="text">Dashboard v2 Trans.</span></a></li>
+                        <li><a href="index-dashboard-v3.html"><span class="text">Dashboard v3</span></a></li>
+                        <li><a href="index-dashboard-v4.html"><span class="text">Dashboard v4 <span class="badge element-bg-color-blue">New</span></span></a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#" class="js-sub-menu-toggle">
+                        <i class="fa fa-navicon"></i><span class="text">Navigations <span class="badge element-bg-color-blue">New</span></span>
+                        <i class="toggle-icon fa fa-angle-left"></i>
+                    </a>
+                    <ul class="sub-menu ">
+                        <li><a href="nav-default-fixed.html"><span class="text">Default Fixed Sidebar</span></a></li>
+                        <li><a href="nav-normal.html"><span class="text">Normal Sidebar</span></a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#" class="js-sub-menu-toggle">
+                        <i class="fa fa-columns"></i><span class="text">Layouts <span class="badge element-bg-color-blue">New</span></span>
+                        <i class="toggle-icon fa fa-angle-left"></i>
+                    </a>
+                    <ul class="sub-menu ">
+                        <li><a href="layout-collapsed.html"><span class="text">Collapsed Sidebar</span></a></li>
+                        <li><a href="layout-minified.html"><span class="text">Minified Sidebar</span></a></li>
+                        <li><a href="layout-ontop-navigation.html"><span class="text">On-Top Navigation</span></a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#" class="js-sub-menu-toggle">
+                        <i class="fa fa-clipboard fa-fw"></i><span class="text">Pages</span>
+                        <i class="toggle-icon fa fa-angle-left"></i>
+                    </a>
+                    <ul class="sub-menu ">
+                        <li><a href="page-profile.html"><span class="text">Profile</span></a></li>
+                        <li><a href="page-invoice.html"><span class="text">Invoice</span></a></li>
+                        <li><a href="page-knowledgebase.html"><span class="text">Knowledge Base</span></a></li>
+                        <li><a href="page-new-message.html"><span class="text">New Message</span></a></li>
+                        <li><a href="page-view-message.html"><span class="text">View Message</span></a></li>
+                        <li><a href="page-search-result.html"><span class="text">Search Result</span></a></li>
+                        <li><a href="page-submit-ticket.html"><span class="text">Submit Ticket</span></a></li>
+                        <li><a href="page-faq.html"><span class="text">FAQ</span></a></li>
+                        <li><a href="page-register.html"><span class="text">Register</span></a></li>
+                        <li><a href="page-register-transparent.html"><span class="text">Register Transparent</span></a></li>
+                        <li><a href="page-login.html"><span class="text">Login</span></a></li>
+                        <li><a href="page-login-transparent.html"><span class="text">Login Transparent</span></a></li>
+                        <li><a href="page-404.html"><span class="text">404</span></a></li>
+                        <li><a href="page-404-transparent.html"><span class="text">404 Transparent</span></a></li>
+                        <li><a href="page-blank.html"><span class="text">Blank Page</span></a></li>
+                    </ul>
+                </li>
+                <li><a href="page-inbox.html"><i class="fa fa-envelope-o"></i><span class="text">Inbox <span class="badge red-bg">32</span></span></a></li>
+                <li>
+                    <a href="#" class="js-sub-menu-toggle">
+                        <i class="fa fa-file"></i><span class="text">File Manager</span>
+                        <i class="toggle-icon fa fa-angle-left"></i>
+                    </a>
+                    <ul class="sub-menu ">
+                        <li><a href="page-file-manager.html"><span class="text">Default</span></a></li>
+                        <li><a href="page-file-manager-transparent.html"><span class="text">Transparent</span></a></li>
+                    </ul>
+                </li>
+                <li><a href="page-projects.html"><i class="fa fa-briefcase"></i><span class="text">Projects</span></a></li>
+                <li><a href="page-project-detail.html"><i class="fa fa-tasks"></i><span class="text">Project Detail</span></a></li>
+                <li>
+                    <a href="#" class="js-sub-menu-toggle">
+                        <i class="fa fa-bar-chart-o fw"></i><span class="text">Charts &amp; Statistics</span>
+                        <i class="toggle-icon fa fa-angle-left"></i>
+                    </a>
+                    <ul class="sub-menu ">
+                        <li><a href="charts-statistics.html"><span class="text">Charts</span></a></li>
+                        <li><a href="charts-statistics-transparent.html"><span class="text">Charts Transparent</span></a></li>
+                        <li><a href="charts-statistics-interactive.html"><span class="text">Interactive Charts</span></a></li>
+                        <li><a href="charts-statistics-interactive-transparent.html"><span class="text">Interactive Charts Transparent</span></a></li>
+                        <li><a href="charts-statistics-real-time.html"><span class="text">Realtime Charts</span></a></li>
+                        <li><a href="charts-statistics-real-time-transparent.html"><span class="text">Realtime Charts Transparent</span></a></li>
+                        <li><a href="charts-d3charts.html"><span class="text">D3 Charts</span></a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#" class="js-sub-menu-toggle">
+                        <i class="fa fa-edit fw"></i><span class="text">Forms</span>
+                        <i class="toggle-icon fa fa-angle-left"></i>
+                    </a>
+                    <ul class="sub-menu ">
+                        <li><a href="form-inplace-editing.html"><span class="text">In-place Editing</span></a></li>
+                        <li><a href="form-elements.html"><span class="text">Form Elements</span></a></li>
+                        <li><a href="form-layouts.html"><span class="text">Form Layouts</span></a></li>
+                        <li><a href="form-bootstrap-elements.html"><span class="text">Bootstrap Elements</span></a></li>
+                        <li><a href="form-validations.html"><span class="text">Validation</span></a></li>
+                        <li><a href="form-file-upload.html"><span class="text">File Upload</span></a></li>
+                        <li><a href="form-text-editor.html"><span class="text">Text Editor</span></a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#" class="js-sub-menu-toggle">
+                        <i class="fa fa-list-alt fw"></i><span class="text">UI Elements</span>
+                        <i class="toggle-icon fa fa-angle-left"></i>
+                    </a>
+                    <ul class="sub-menu ">
+                        <li><a href="ui-elements-general.html"><span class="text">General Elements</span></a></li>
+                        <li><a href="ui-elements-tabs.html"><span class="text">Tabs</span></a></li>
+                        <li><a href="ui-elements-buttons.html"><span class="text">Buttons</span></a></li>
+                        <li><a href="ui-elements-icons.html"><span class="text">Icons <span class="badge element-bg-color-blue">Updated</span></span></a></li>
+                        <li><a href="ui-elements-flash-message.html"><span class="text">Flash Message</span></a></li>
+                    </ul>
+                </li>
+                <li><a href="widgets.html"><i class="fa fa-puzzle-piece fa-fw"></i><span class="text">Widgets</span></a></li>
+                <li>
+                    <a href="#" class="js-sub-menu-toggle">
+                        <i class="fa fa-gears fw"></i><span class="text">Components</span>
+                        <i class="toggle-icon fa fa-angle-left"></i>
+                    </a>
+                    <ul class="sub-menu ">
+                        <li><a href="components-wizard.html"><span class="text">Wizard (with validation)</span></a></li>
+                        <li><a href="components-calendar.html"><span class="text">Calendar</span></a></li>
+                        <li><a href="components-maps.html"><span class="text">Maps</span></a></li>
+                        <li><a href="components-maps-transparent.html"><span class="text">Maps Transparent</span></a></li>
+                        <li><a href="components-gallery.html"><span class="text">Gallery</span></a></li>
+                        <li><a href="components-tree-view.html"><span class="text">Tree View </span></a></li>
+                        <li><a href="components-tree-view-transparent.html"><span class="text">Tree View Transparent</span></a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#" class="js-sub-menu-toggle">
+                        <i class="fa fa-table fw"></i><span class="text">Tables</span>
+                        <i class="toggle-icon fa fa-angle-left"></i>
+                    </a>
+                    <ul class="sub-menu ">
+                        <li><a href="tables-static-table.html"><span class="text">Static Table</span></a></li>
+                        <li><a href="tables-dynamic-table.html"><span class="text">Dynamic Table</span></a></li>
+                    </ul>
+                </li>
+                <li><a href="typography.html"><i class="fa fa-font fa-fw"></i><span class="text">Typography</span></a></li>
+                <li>
+                    <a href="#" class="js-sub-menu-toggle">
+                        <i class="fa fa-bars"></i>
+                        <span class="text">Menu Lvl 1</span>
+                        <i class="toggle-icon fa fa-angle-left"></i>
+                    </a>
+                    <ul class="sub-menu">
+                        <li class="">
+                            <a href="#" class="js-sub-menu-toggle">
+                                <span class="text">Menu Lvl 2</span>
+                                <i class="toggle-icon fa fa-angle-left"></i>
+                            </a>
+                            <ul class="sub-menu">
+                                <li><a href="#">Menu Lvl 3</a></li>
+                                <li><a href="#">Menu Lvl 3</a></li>
+                                <li><a href="#">Menu Lvl 3</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <span class="text">Menu Lvl 2</span>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+        <!-- /main-nav -->
     </div>
-    </div>
+</div>
+<!-- END LEFT SIDEBAR -->
